--- a/lib/src/main/AndroidManifest.xml
+++ b/lib/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
 		<activity
 			android:name=".DocumentActivity"
 			android:configChanges="orientation|screenSize|keyboardHidden"
+			android:exported="true"
 			>
 			<intent-filter>
 				<!-- match content and file requests with known mime-type -->
@@ -92,6 +93,7 @@
 		<activity
 			android:name=".OutlineActivity"
 			android:configChanges="orientation|screenSize|keyboardHidden"
+			android:exported="true"
 			>
 		</activity>
 	</application>
